# proyecto-final-arqui-rumbacorp

./: CMAKECOUNT  COUNTRST  MAP3.yaml  MAP4.pgm  MAP4.yaml  PRUEBA.txt  README.md  XMLCOUNT  coordenadas.txt  map_1744360757.pgm  map_31.yaml
 maps/: map_31.pgm
APUNTES-TRY/: códigos-con-mapa.txt  uso-de-mapa.txt
APUNTES-TRY/programa6/: CMakeLists.txt
APUNTES-TRY/programa6/config/: params.yaml
APUNTES-TRY/programa6/include/controlper/: ControlNode.hpp  PIDControler.hpp  TfPublisher.hpp
APUNTES-TRY/programa6/launch/: astra_extion  follow_person.launch.py
APUNTES-TRY/programa6/src/control/: ControlNode.cpp
APUNTES-TRY/programa6/src/controlper/: ControlNode.cpp  PIDControler.cpp  TfPublisher.cpp
bt_nodes/hri/: CMakeLists.txt  README.md  package.xml  thirdparty.repos
bt_nodes/hri/bt_xml/: confirm.xml  listen_and_repeat.xml  query.xml
bt_nodes/hri/config/: grammar.txt  prompt.txt
bt_nodes/hri/include/ctrl_support/: BTActionNode.hpp
bt_nodes/hri/include/hri/dialog/: listen.hpp  query.hpp
bt_nodes/hri/launch/: hri.launch.py  hri_dependencies.launch.py
bt_nodes/hri/src/hri/dialog/: dialog_confirmation.cpp  speak.cpp
hri/: CMakeLists.txt
hri/bt_xml/: speak.xml
hri/include/hri/dialog/: dialog_confirmation.hpp  speak.hpp
hri/launch/: hri.launch.py
hri/src/: main_hri.cpp
hri/src/hri/dialog/: listen.cpp  query.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pfa_restaurante/lib/pfa_restaurante/: control_main
install/pfa_restaurante/share/ament_index/resource_index/package_run_dependencies/: pfa_restaurante
install/pfa_restaurante/share/ament_index/resource_index/parent_prefix_path/: pfa_restaurante
install/pfa_restaurante/share/pfa_restaurante/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pfa_restaurante/share/pfa_restaurante/behavior_tree_xml/: restaurante.xml
install/pfa_restaurante/share/pfa_restaurante/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  pfa_restauranteConfig-version.cmake  pfa_restauranteConfig.cmake
install/pfa_restaurante/share/pfa_restaurante/environment/: ament_prefix_path.dsv  path.dsv
install/pfa_restaurante/share/pfa_restaurante/launch/: astra_extion  follow_person.launch.py
log/: latest_build
maps/: coordenadas.txt
pfa_restaurante/: CMakeLists.txt  package.xml
pfa_restaurante/behavior_tree_xml/: restaurante.xml
pfa_restaurante/hri/config/: hri.yaml
pfa_restaurante/include/controlper/: CheckTable.hpp  CountPeople.hpp  GoToDoor.hpp  GoToTable.hpp  Listen.hpp  Speak.hpp  mesa.hpp
pfa_restaurante/launch/: pfa.launch.py
pfa_restaurante/src/: control_main.cpp  tf_main.cpp
pfa_restaurante/src/controlper/: CheckTable.cpp  ClaseMesa.cpp  CountPeople.cpp  GoToDoor.cpp  GoToTable.cpp  Listen.cpp  Speak.cpp
programa6/: package.xml
