<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pfa_restaurante</name>
  <version>0.0.0</version>
  <description>Paquete que a través de BT es capaz de sentar personas a petición</description>
  <maintainer email="m.casero.2023@alumnos.urjc.es">mario</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend> <!-- añadido del bumpgo -->
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <!-- <depend>libzmq3-dev</depend> añadido del bumpgo --> 
  <depend>ament_index_cpp</depend> <!-- añadido del bumpgo -->
  <depend>rclcpp_cascade_lifecycle</depend>
  <!--<depend>audio_common_msgs</depend>-->
  <depend>whisper_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hri_bt_nodes</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
